--- a/style.css
+++ b/style.css
@@ -44,3 +44,9 @@ display: block;
 margin-left: auto;
 margin-right: auto;
 }
+
+#button{
+  display: block;
+margin-left: auto;
+margin-right: auto;
+}
