--- a/style.css
+++ b/style.css
@@ -50,3 +50,9 @@ margin-right: auto;
 margin-left: auto;
 margin-right: auto;
 }
+
+#boton-copiar{
+  display: block;
+margin-left: auto;
+margin-right: auto;
+}
