--- a/style.css
+++ b/style.css
@@ -45,10 +45,19 @@ margin-left: auto;
 margin-right: auto;
 }
 
-#button{
+/* #button{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+} */
+
+#botones{
   display: block;
 margin-left: auto;
 margin-right: auto;
+text-align: center;
+
 }
 
 #boton-copiar{
